--- a/book-client-dev.properties
+++ b/book-client-dev.properties
@@ -1,3 +1,4 @@
 spring.application.name=book-client
 server.port=3001
+msg=66666666
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:1001/eureka/
