--- a/serviceconfig-dev.properties
+++ b/serviceconfig-dev.properties
@@ -1,10 +1,11 @@
-spring.application.name=book-service
+
 spring.datasource.name=mydb
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.application.name=service
 server.port=2001
 
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:1001/eureka/
