--- a/service-config-dev.properties
+++ b/service-config-dev.properties
@@ -11,7 +11,7 @@ server.port=2001
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:1001/eureka/
 
 mybatis.mapperLocations=classpath*:mybatis/mapper-*.xml
-mybatis.typeAliasesPackage=com.zys.model
+mybatis.typeAliasesPackage=com.jk.model
 
 mongdb.mongo.host=localhost
 mongdb.mongo.port=27017
