--- a/client-config-dev.properties
+++ b/client-config-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.name=mydb
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/ant?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://192.168.1.130:3306/ant?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -8,17 +8,17 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.application.name=client
 server.port=8081
 
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:1001/eureka/
+eureka.client.serviceUrl.defaultZone=http://192.168.1.130:1001/eureka/
 
 mybatis.mapperLocations=classpath*:mybatis/mapper-*.xml
 mybatis.typeAliasesPackage=com.jk.model
 
-mongdb.mongo.host=localhost
+mongdb.mongo.host=192.168.1.130
 mongdb.mongo.port=27017
 mongdb.mongo.dbname=1810B
   
 redis.database=0  
-redis.host=localhost  
+redis.host=192.168.1.130  
 redis.port=6379
 redis.password=
 redis.pool.max-idle=100
