--- a/service-config-dev.properties
+++ b/service-config-dev.properties
@@ -22,3 +22,5 @@ redis.pool.min-idle=1
 redis.pool.max-active=1000
 redis.pool.max-wait=-1
 redis.pool.timeout=0
+redis.jedis.pool.max-active:100
+redis.jedis.pool.max-idle:10
