--- a/service-config-dev.properties
+++ b/service-config-dev.properties
@@ -13,14 +13,14 @@ eureka.client.serviceUrl.defaultZone=http://192.168.1.130:1001/eureka/
 mybatis.mapperLocations=classpath*:mybatis/mapper-*.xml
 mybatis.typeAliasesPackage=com.jk.model
   
-redis.database=0  
-redis.host=192.168.1.130  
-redis.port=6379
-redis.password=
-redis.pool.max-idle=100
-redis.pool.min-idle=1
-redis.pool.max-active=1000
-redis.pool.max-wait=-1
-redis.pool.timeout=0
-redis.jedis.pool.max-active=100
-redis.jedis.pool.max-idle=10
+spring.redis.database=0  
+spring.redis.host=192.168.1.130  
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.pool.max-idle=100
+spring.redis.pool.min-idle=1
+spring.redis.pool.max-active=1000
+spring.redis.pool.max-wait=-1
+spring.redis.pool.timeout=0
+spring.redis.jedis.pool.max-active=100
+spring.redis.jedis.pool.max-idle=10
