--- a/client-config-dev.properties
+++ b/client-config-dev.properties
@@ -22,5 +22,5 @@ redis.pool.max-idle=100
 redis.pool.min-idle=1
 redis.pool.max-active=1000
 redis.pool.max-wait=-1
-redis.pool.timeout=
+redis.pool.timeout=0
 
