--- a/client-config-dev.properties
+++ b/client-config-dev.properties
@@ -15,8 +15,8 @@ mybatis.typeAliasesPackage=com.jk.model
 
   
 redis.database=0  
-redis.host=192.168.1.130  
-redis.port=6379
+redis.host=localhost  
+redis.port=6378
 redis.password=
 redis.pool.max-idle=100
 redis.pool.min-idle=1
