--- a/service-config-dev.properties
+++ b/service-config-dev.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://192.168.1.130:3306/ant?useUnicode=true&charac
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.application.name=service
+spring.application.name=service123
 server.port=2001
 
 eureka.client.serviceUrl.defaultZone=http://192.168.1.130:1001/eureka/
