--- a/client-config-dev.properties
+++ b/client-config-dev.properties
@@ -12,6 +12,9 @@ eureka.client.serviceUrl.defaultZone=http://192.168.1.130:1001/eureka/
 
 mybatis.mapperLocations=classpath*:mybatis/mapper-*.xml
 mybatis.typeAliasesPackage=com.jk.model
+
+spring.data.mongodb.host=192.168.1.130
+spring.data.mongodb.port=27017
   
 spring.redis.database=0  
 spring.redis.host=192.168.1.130
