--- a/client-config-dev.properties
+++ b/client-config-dev.properties
@@ -15,6 +15,7 @@ mybatis.typeAliasesPackage=com.jk.model
 
 spring.data.mongodb.host=192.168.1.130
 spring.data.mongodb.port=27017
+spring.data.mongodb.database=1810B
   
 spring.redis.database=0  
 spring.redis.host=192.168.1.130
