--- a/client-config-dev.properties
+++ b/client-config-dev.properties
@@ -29,3 +29,6 @@ spring.redis.pool.timeout=0
 
 feign.compression.request.enabled=false
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
+
+eureka.client.eureka-server-read-timeout-seconds=50
+feign.httpclient.connection-timeout=50000
