--- a/client-config-dev.properties
+++ b/client-config-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.name=mydb
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://192.168.1.105:3306/eee?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://192.168.1.113:3306/classroom?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
